<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/mobile_navigation"
  app:startDestination="@+id/navigation_home">

  <fragment
    android:id="@+id/navigation_home"
    android:name="com.example.cryptomoney.ui.home.HomeFragment"
    android:label="@string/title_home"
    tools:layout="@layout/fragment_home" />

  <fragment
    android:id="@+id/navigation_transactions"
    android:name="com.example.cryptomoney.ui.transactions.TransactionsFragment"
    android:label="@string/title_transactions"
    tools:layout="@layout/fragment_transactions" />

  <fragment
    android:id="@+id/navigation_currencies"
    android:name="com.example.cryptomoney.ui.currencies.CurrenciesFragment"
    android:label="@string/title_currencies"
    tools:layout="@layout/fragment_currencies" />

  <fragment
    android:id="@+id/navigation_profile"
    android:name="com.example.cryptomoney.ui.profile.ProfileFragment"
    android:label="@string/title_profile"
    tools:layout="@layout/fragment_profile" />
</navigation>