<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginTop="400dp"
        android:foregroundGravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/slogan_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:layout_marginBottom="20dp"
            android:text="@string/slogan_text"
            android:textColor="#ECF0F1" />

        <TextView
            android:id="@+id/error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:shadowColor="#BFFFFFFF"
            android:textColor="#D80738"
            android:textColorHighlight="#39FFFFFF" />

        <EditText
            android:id="@+id/email_input"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:layout_marginBottom="20dp"
            android:background="#ECF0F1"
            android:hint="@string/email_input"
            android:paddingLeft="10dp"
            android:singleLine="true"
            android:text="hasan@gmail.com"
            android:textSize="20sp"
            android:translationY="10dp" />

        <EditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:layout_marginBottom="20dp"
            android:background="#ECF0F1"
            android:hint="@string/password_input"
            android:paddingLeft="10dp"
            android:singleLine="true"
            android:text="123123123"
            android:textSize="20sp"
            android:translationY="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/login_button"
                android:layout_width="108dp"
                android:layout_height="47dp"
                android:layout_weight="1"
                android:onClick="login_button"
                android:text="@string/login_button" />

            <Button
                android:id="@+id/register_button"
                android:layout_width="108dp"
                android:layout_height="47dp"
                android:text="@string/register_button" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>