<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  android:padding="16dp">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="12dp"
    android:orientation="horizontal">
    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/dashboard"
      android:textColor="@color/colorPrimaryDark"
      android:textSize="24sp" />

    <View
      android:layout_width="40dp"
      android:layout_height="6dp"
      android:layout_gravity="center"
      android:layout_marginStart="8dp"
      android:background="@drawable/bg_view">

    </View>

  </LinearLayout>

  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="12dp"
    android:text="@string/slogan_text"
    android:textColor="@color/colorPrimary"
    android:textSize="18dp" />

  <androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="22dp"
    app:cardCornerRadius="0dp"
    app:cardElevation="0dp">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@drawable/bg_view"
      android:orientation="vertical"
      android:padding="16dp">
      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/usd_text"
          android:textColor="@color/colorAccent"
          android:textSize="18sp" />

        <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content">
          <ImageView
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_alignParentRight="true"
            android:src="@drawable/ic_dollar_symbol" />
        </RelativeLayout>
      </LinearLayout>

    </LinearLayout>
  </androidx.cardview.widget.CardView>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ListView
      android:id="@+id/listview"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="12dp"
      android:divider="?attr/selectableItemBackgroundBorderless"
      android:padding="15dp" />

    <androidx.cardview.widget.CardView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="22dp"
      app:cardCornerRadius="0dp"
      app:cardElevation="0dp">

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_view"
        android:orientation="vertical"
        android:padding="16dp">
        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal">
          <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_transactions"
            android:textColor="@color/colorAccent"
            android:textSize="18sp" />

          <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
              android:layout_width="wrap_content"
              android:layout_height="28dp"
              android:layout_alignParentRight="true"
              android:src="@drawable/ic_transaction_bar_icon_white" />
          </RelativeLayout>
        </LinearLayout>

      </LinearLayout>
    </androidx.cardview.widget.CardView>

    <ListView
      android:id="@+id/listviewTwo"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="12dp"
      android:layout_marginTop="10dp"
      android:divider="?attr/selectableItemBackgroundBorderless"
      android:padding="10dp" />
  </LinearLayout>


</LinearLayout>