<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="20dp"
    android:layout_margin="10dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_currencies"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="24sp" />

        <View
            android:layout_width="40dp"
            android:layout_height="6dp"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:background="@drawable/bg_view">

        </View>

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_marginLeft="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        app:cardCornerRadius="0dp"
        app:cardElevation="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_bg"
            android:orientation="vertical"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_portfolio"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/hours_text"
                        android:layout_width="wrap_content"
                        android:layout_height="28dp"
                        android:layout_alignParentRight="true"
                        android:text="24HR -"
                        android:textColor="@color/colorAccent" />
                </RelativeLayout>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="$0"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <ListView
        android:id="@+id/listview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:divider="?attr/selectableItemBackgroundBorderless"
        android:padding="20dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/add_currency_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="12dp"
        android:background="@color/colorPrimaryDark"
        android:padding="10dp"
        android:text="@string/add_currency"
        android:textColor="@color/colorAccent"
        android:textSize="12sp" />
</LinearLayout>